tap dancing video

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
 
 <video height="300" id="video" hidden>
-    <source src="media/coffee.mp4"></source>
-    <source src="http://bbq.dfm.io:8888/media/coffee.mp4"></source>
+    <source src="media/tap-dancing.mp4"></source>
+    <source src="http://bbq.dfm.io:8888/media/tap-dancing.mp4"></source>
 </video>
 
 <div class="container">
     <div id="play">Click to play</div>
-    <canvas id="canvas" height="360" width="720"></canvas>
+    <canvas id="canvas" height="360" width="640"></canvas>
 </div>
 
 <script type="text/javascript" charset="utf-8" src="player.js"></script>
